--- a/crtvn-center/pom.xml
+++ b/crtvn-center/pom.xml
@@ -124,6 +124,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
                 <configuration>
                     <nonFilteredFileExtensions>
                         <nonFilteredFileExtension>cert</nonFilteredFileExtension>
