--- a/crtvn-center/src/main/resources/application-dev.yml
+++ b/crtvn-center/src/main/resources/application-dev.yml
@@ -8,8 +8,20 @@ server:
 spring:
   application:
     name: CRTVN-CENTER
+  redis:
+    database: 0
+    host: 192.168.254.150
+    port: 6379
+   # password: 123
+    jedis:
+      pool:
+        max-active: 100
+        max-idle: 3
+        max-wait: -1
+        min-idle: 0
+    timeout: 1000
   datasource:
-    url: jdbc:mysql://192.168.254.150:33306/crtvn?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://192.168.254.150:3308/crtvn?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: root
     driver-class-name:  com.mysql.jdbc.Driver
