--- a/crtvn-center/src/main/resources/application-test.yml
+++ b/crtvn-center/src/main/resources/application-test.yml
@@ -12,6 +12,14 @@ spring:
     database: 0
     host: 127.0.0.1
     port: 6379
+    # password: 123
+    jedis:
+      pool:
+        max-active: 100
+        max-idle: 3
+        max-wait: -1
+        min-idle: 0
+    timeout: 1000
   # password: 123456  # Redis服务器连接密码（默认为空）
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/crtvn?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
