--- a/oauth-center/pom.xml
+++ b/oauth-center/pom.xml
@@ -67,10 +67,7 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
+       
     </dependencies>
 
     <build>
@@ -78,6 +75,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
                 <configuration>
                     <nonFilteredFileExtensions>
                         <nonFilteredFileExtension>cert</nonFilteredFileExtension>
