--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
                 <artifactId>spring-boot-starter-security</artifactId>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>22.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
